[package]
name = "criterion"
version = "0.1.0"
authors = ["Muhammad Falak R Wani <falakreyaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "~0.2.14"
num = "~0.1.36"
permutohedron = "~0.2.2"
primal = "~0.2.3"
#[[bin]]
#name = "criterion"
#path = "src/main.rs"
#
#[dependencies]
#slow_primes = "~0.1.4"
#
#[dev-dependencies]
#criterion = "0.2"
#
#[[bench]]
#name = "my_benchmark"
#harness = false
