[package]
name = "h2"
version = "0.1.0"
authors = ["Muhammad Falak R Wani <falakreyaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = "0.2.0-alpha.6"
bytes = "0.4.12"
futures-preview = "0.3.0-alpha.19"
