[package]
name = "rcb"
version = "0.1.0"
authors = ["Muhammad Falak R Wani <falakreyaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
ansi_term = "0.12.0"
flate2 = "1.0.9"
tar = "0.4.26"
crossbeam = "0.7.2"
data-encoding = "2.1.2"
ring = "0.16.7"
bitflags = "1.1.0"
